// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellComponent Snapshottest Alive cell snapshot 1`] = `
<div
  className="cell alive"
  onClick={[Function]}
>
  1
</div>
`;

exports[`CellComponent Snapshottest Alive old cell snapshot 1`] = `
<div
  className="cell alive old"
  onClick={[Function]}
>
  12
</div>
`;

exports[`CellComponent Snapshottest Dead cell snapshot 1`] = `
<div
  className="cell dead"
  onClick={[Function]}
>
  47
</div>
`;
